# diabetes-prediction

./: .gitignore  README.md  mlflow.db  pyproject.toml  requirements.txt  setup.py
config/: README.md
data/: README.md
demos/: mlflow-hyperparam-tuning.py
models/: README.md
notebooks/: README.md
reports/: README.md
src/: README.md  __init__.py
src/models/: lifestyle_vs_labs_vs_all.py
tests/: README.md  __init__.py
