[tool.poetry]
name = "diabetes-prediction"
version = "0.1.0"
description = "Diabetes type 2 prediction using lab and lifestye multi-markers"
authors = ["Ravindu Weerasinghe <ravindutharuka2001@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
scikit-learn = ">=1.8.0,<2.0.0"
pandas = ">=2.3.3,<3.0.0"
matplotlib = ">=3.10.8,<4.0.0"
seaborn = ">=0.13.2,<0.14.0"
mlflow = ">=3.8.0,<4.0.0"
graphql-core = ">=3.2.3,<4.0.0"
graphene = ">=3.3.0,<4.0.0"
graphql-relay = ">=3.2.0,<4.0.0"
lightgbm = ">=4.6.0,<5.0.0"
optuna = "^4.6.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
